typography section changes

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -16,65 +16,54 @@
                 </div>
             </div>
             <ul class="fonts-list">
+                <li class="table-headers">
+                    <div class="span6"><p class="large">Headers</p></div>
+                    <div class="span6 lg md2 md1 sm-nav sm"><p class="large">Font Size &amp; Weight</p></div>
                 <li>
-                    <div class="span4"><h1>Header 1</h1></div>
-                    <p class="span4 lg grey20">48px/60px</p>
-                    <p class="span4 md2 grey20">40px/60px</p>
-                    <p class="span4 md1 grey20">40px/60px Semibold</p>
-                    <p class="span4 sm-md grey20">36px/60px Semibold</p>
-                    <p class="span4 sm grey20">30px/60px Semibold</p>
-                    <p class="span4 weight grey20">Regular</p>
+                    <div class="span5"><h1>H1.Article title</h1></div>
+                    <div class="span7 lg grey50"><h1>Regular (600), 48px</h1></div>
+                    <div class="span7 md2 grey50"><h1>Regular (600), 40px</h1></div>
+                    <div class="md1 grey50"><p>Regular (600), 40px</p></div>
+                    <p class="sm-md grey50">Regular (600), 36px</p>
+                    <p class="sm grey50">Regular (600), 30px</p>
                 </li>
                 <li>
-                    <div class="span4"><h2>Header 2</h2></div>
-                    <p class="span4 lg grey20">40px/50px</p>
-                    <p class="span4 md2 grey20">36px/45px</p>
-                    <p class="span4 md1 grey20">36px/45px Bold</p>
-                    <p class="span4 sm-nav grey20">30px/37.5px Bold</p>
-                    <p class="span4 weight grey20">Bold</p>
+                    <div class="span6"><h2>H2.PAGE TITLE</h2></div>
+                    <div class="span6 lg grey50"><h2>Bold (700), 40px</h2></div>
+                    <div class="span6 md2 grey50"><h2>Bold (700), 36px</h2></div>
+                    <div class="md1 grey50"><p>Bold (700), 36px</p></div>
+                    <p class="sm-nav grey50">Bold (700), 30px</p>
                 </li>
                 <li>
-                    <div class="span4"><h3>Header 3</h3></div>
-                    <p class="span4 lg grey20">36px/45px</p>
-                    <p class="span4 md2 grey20">30px/37.5px</p>
-                    <p class="span4 md1 grey20">30px/37.5px Bold</p>
-                    <p class="span4 sm-nav grey20">24px/30px Bold</p>
-                    <p class="span4 weight grey20">Bold</p>
+                    <div class="span6"><h3>H3.PAGE TITLE</h3></div>
+                    <div class="span6 lg grey50"><h3>Bold (700), 36px</h3></div>
+                    <div class="span6 md2 grey50"><h3>Bold (700), 30px</h3></div>
+                    <div class="md1 grey50"><p>Bold (700), 30px</p></div>
+                    <p class="sm-nav grey50">Bold (700), 24px</p>
                 </li>
                 <li>
-                    <div class="span4"><h4>Header 4</h4></div>
-                    <p class="span4 md2 lg grey20">22px/27.5px</p>
-                    <p class="span4 md1 grey20">22px/27.5px Bold</p>
-                    <p class="span4 sm-nav grey20">21px/26.26px Bold</p>
-                    <p class="span4 weight grey20">Bold</p>
+                    <div class="span6"><h4>H4.SECTION HEADER</h4></div>
+                    <div class="span6 md2 lg grey50"><h4>Bold (700), 24px</h4></div>
+                    <div class="md1 grey50"><p>Bold (700), 24px</p></div>
+                    <p class="sm-nav grey50">Bold (700), 21px</p>
                 </li>
                 <li>
-                    <div class="span4"><h5>Header 5</h5></div>
-                    <p class="span4 lg md2 grey20">18px/24px</p>
-                    <p class="span4 md1 grey20">18px/24px Bold</p>
-                    <p class="span4 sm-nav grey20">16px/20px Bold</p>
-                    <p class="span4 weight grey20">Bold</p>
+                    <div class="span6"><h5>H5.SUB-SECTION HEADER</h5></div>
+                    <div class="span6 lg md2 grey50"><h5>Bold (700), 18px</h5></div>
+                    <div class="md1 grey50"><p>Bold (700), 18px</p></div>
+                    <p class="sm-nav grey50">Bold (700), 16px</p>
                 </li>
                 <li>
-                    <p class="span4 large">Large paragraph</p>
-                    <p class="span4 lg md2 grey20">18px/24px</p>
-                    <p class="span4 md1 grey20">18px/24px Bold</p>
-                    <p class="span4 sm-nav grey20">16px/20px Bold</p>
-                    <p class="span4 grey20 weight">Bold</p>
+                    <p class="span6">Body Text</p>
+                    <div class="span6 grey50 md2 lg"><p>Light (400), 16px</p></div>
+                    <div class="grey50 md1"><p>Light (400), 16px</p></div>
+                    <p class="grey50 sm-nav">Light (400), 16px</p>
                 </li>
                 <li>
-                    <p class="span4">Body Text</p>
-                    <p class="span4 grey20 md2 lg">16px/26px</p>
-                    <p class="span4 grey20 md1">16px/26px Regular</p>
-                    <p class="span4 grey20 sm-nav">16px/26px Regular</p>
-                    <p class="span4 grey20 weight">Light</p>
-                </li>
-                <li>
-                    <p class="span4 small">Small paragraph</p>
-                    <p class="span4 grey20 md2 lg">14px/17.5px</p>
-                    <p class="span4 grey20 md1">14px/17.5px Regular</p>
-                    <p class="span4 grey20 sm-nav">13px/16.26px Regular</p>
-                    <p class="span4 grey20 weight">Light</p>
+                    <p class="span6 small">SMALL PARAGRAPH, ACCENTS (Buttons, Dropdowns, Date, Author)</p>
+                    <div class="span6 grey50 md2 lg"><p class="small">Light (400), 14px</p></div>
+                    <div class="grey50 md1"><p>Light (400), 14px</p></div>
+                    <p class="grey50 sm-nav">Light (400), 13px</p>
                 </li>
             </ul>
             <h4>PARAGRAPH DEFAULTS</H4>
