--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -1,69 +1,105 @@
-body {
-  font: normal 1em/1.625 $font-family;
+/* https://github.com/RedHatBrand/overpass */
+
+/* Webfont: Overpass-Bold */
+@font-face {
+    font-family: 'Overpass';
+    src: url('/e2/fonts/rv7/overpass/Overpass-Bold.eot'); /* IE9 Compat Modes */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/e2/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
+         url('/e2/fonts/rv7/overpass/Overpass-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/e2/fonts/rv7/overpass/Overpass-Bold.svg#Overpass-Bold') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: 700;
+    text-rendering: optimizeLegibility;
 }
 
-%h1 {
-  font: 600 1.875em/1.333 $font-family;
-
-  @include breakpoints(nav) {
-    font: 600 2.25em/1.333 $font-family;
-  }
-
-  @include breakpoints(tablet lg_tablet) {
-    font: 600 2.5em/1.25 $font-family;
-  }
-
-  @include breakpoints(sm_desktop desktop large really_big) {
-    font: 600 3em/1.25 $font-family;
-  }
+/* Webfont: Overpass-BoldItalic */
+@font-face {
+    font-family: 'Overpass';
+    src: url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.eot'); /* IE9 Compat Modes */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
+         url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.svg#Overpass-BoldItalic') format('svg'); /* Legacy iOS */
+    font-style: italic;
+    font-weight: 700;
+    text-rendering: optimizeLegibility;
 }
 
-%h2 {
-  font: 700 1.875em/1.333 $font-family;
-
-  @include breakpoints(tablet lg_tablet) {
-    font: 700 2.25em/1.333 $font-family;
-  }
-
-  @include breakpoints(sm_desktop desktop large really_big) {
-    font: 700 2.5em/1.25 $font-family;
-  }
+/* Webfont: Overpass-Reg */
+@font-face {
+    font-family: 'Overpass';
+    src: url('/e2/fonts/rv7/overpass/Overpass-Regular.eot'); /* IE9 Compat Modes */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/e2/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
+         url('/e2/fonts/rv7/overpass/Overpass-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/e2/fonts/rv7/overpass/Overpass-Regular.svg#Overpass-Regular') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: 600;
+    text-rendering: optimizeLegibility;
 }
 
-%h3 {
-  font: 700 1.5em/1.5 $font-family;
-
-  @include breakpoints(tablet lg_tablet) {
-    font: 700 1.875em/1.333 $font-family;
-  }
-
-  @include breakpoints(sm_desktop desktop large really_big) {
-    font: 700 2.25em/1.333 $font-family;
-  }
+/* Webfont: Overpass-Italic */
+@font-face {
+    font-family: 'Overpass';
+    src: url('/e2/fonts/rv7/overpass/Overpass-Italic.eot'); /* IE9 Compat Modes */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/e2/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
+         url('/e2/fonts/rv7/overpass/Overpass-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/e2/fonts/rv7/overpass/Overpass-Italic.svg#Overpass-Italic') format('svg'); /* Legacy iOS */
+    font-style: italic;
+    font-weight: 600;
+    text-rendering: optimizeLegibility;
 }
 
-%h4 {
-  font: 700 1.313em/1.4 $font-family;
-  
-  @include breakpoints(tablet lg_tablet sm_desktop desktop large really_big) {
-    font: 700 1.5em/1.5 $font-family;
-  }
+/* Webfont: Overpass-Light */
+@font-face {
+    font-family: 'Overpass';
+    src: url('/e2/fonts/rv7/overpass/Overpass-Light.eot'); /* IE9 Compat Modes */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/e2/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
+         url('/e2/fonts/rv7/overpass/Overpass-Light.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/e2/fonts/rv7/overpass/Overpass-Light.svg#Overpass-Light') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
 }
 
-%h5 {
-  font: 700 1em/1.625 $font-family;
-  
-  @include breakpoints(tablet lg_tablet sm_desktop desktop large really_big) {
-    font: 700 1.125em/1.4 $font-family;
-  }
+/* Webfont: Overpass-LightItalic */
+@font-face {
+    font-family: 'Overpass';
+    src: url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.eot'); /* IE9 Compat Modes */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
+         url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.svg#Overpass-LightItalic') format('svg'); /* Legacy iOS */
+    font-style: italic;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
 }
 
-h1 { @extend %h1; }
-h2 { @extend %h2; }
-h3 { @extend %h3; }
-h4 { @extend %h4; }
-h5 { @extend %h5; }
+/* Webfont: Overpass-ExtraLight */
+@font-face {
+    font-family: 'Overpass';
+    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.eot'); /* IE9 Compat Modes */
+    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
+         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.svg#Overpass-ExtraLight') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
+}
 
-@import "page-defaults";
-
-
+/* Webfont: Overpass-ExtraLightItalic */
+@font-face {
+    font-family: 'Overpass';
+    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.eot'); /* IE9 Compat Modes */
+    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
+         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic') format('svg'); /* Legacy iOS */
+    font-style: italic;
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
+}
