added parallax footer css to footer css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="/css/guide.css" type="text/css" media="screen">
 </head>
 <body>
-    <section id="main" class="main-content" role="main">
+    {% include elements/header.html %}
+    <div class="main" role="main">
         {{ content }}
-    </section>
+    </div>
     {% include elements/footer.html %}
     {% include scripts.html %}
  </body>
