reduce min-height of nav to 0 when scrolled down

--- a/_scss/elements/_header.scss
+++ b/_scss/elements/_header.scss
@@ -75,6 +75,10 @@ header {
   top: 0;
   z-index: 100;
 
+  &.scrolled-down {
+    min-height: 0;
+  }
+
   .nav-army-star {
     background-color: #000;
     border-radius: 10px;
