--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -70,17 +70,17 @@
     <div class="container no-bottom">
         <div class="inner-container">
             <div class="elem">
+                <h4>Hot Topic Bar</h4>
+            </div>
+        </div>
+    </div>
+    {% include elements/hot-topic.html %}
+    <div class="container no-bottom">
+        <div class="inner-container">
+            <div class="elem">
                 <h4>Quotes</h4>
             </div>
         </div>
     </div>
     {% include elements/quotes.html %}
-    <div class="container">
-        <div class="inner-container">
-            <div class="elem">
-                <h4>Hot Topic Bar</h4>
-                {% include elements/hot-topic.html %}
-            </div>
-        </div>
-    </div>
 </section>
