--- a/_scss/elements/_playlist.scss
+++ b/_scss/elements/_playlist.scss
@@ -193,10 +193,10 @@
         }
         
         h5 {
+          border-bottom: 5px solid #ffcc00;
           display: table-cell;
           height: 56px;
-          font: 700 21px/22px $font-family;
-          border-bottom: 5px solid #ffcc00;
+          line-height: 22px;
           padding: 2px 16px 0 0;
           vertical-align: middle;
 
