--- a/_scss/elements/_photo-slideshow.scss
+++ b/_scss/elements/_photo-slideshow.scss
@@ -69,7 +69,7 @@
           border-top: 1px solid map-get($army-branding, grey20);
           display: block;
           margin: 10px 0 0;
-          padding: 10px 0 15px;
+          padding: 10px 0 0;
         }
         
         .caption-author {
