removing eot fonts

--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -3,9 +3,7 @@
 /* Webfont: Overpass-Bold */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Bold.eot'); /* IE9 Compat Modes */
-    src: url('/e2/fonts/rv7/overpass/Overpass-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/e2/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
          url('/e2/fonts/rv7/overpass/Overpass-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/e2/fonts/rv7/overpass/Overpass-Bold.svg#Overpass-Bold') format('svg'); /* Legacy iOS */
     font-style: normal;
@@ -16,9 +14,7 @@
 /* Webfont: Overpass-BoldItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.eot'); /* IE9 Compat Modes */
-    src: url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
          url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.svg#Overpass-BoldItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
@@ -29,9 +25,7 @@
 /* Webfont: Overpass-Reg */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Regular.eot'); /* IE9 Compat Modes */
-    src: url('/e2/fonts/rv7/overpass/Overpass-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/e2/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
          url('/e2/fonts/rv7/overpass/Overpass-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/e2/fonts/rv7/overpass/Overpass-Regular.svg#Overpass-Regular') format('svg'); /* Legacy iOS */
     font-style: normal;
@@ -42,9 +36,7 @@
 /* Webfont: Overpass-Italic */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Italic.eot'); /* IE9 Compat Modes */
-    src: url('/e2/fonts/rv7/overpass/Overpass-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/e2/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
          url('/e2/fonts/rv7/overpass/Overpass-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/e2/fonts/rv7/overpass/Overpass-Italic.svg#Overpass-Italic') format('svg'); /* Legacy iOS */
     font-style: italic;
@@ -55,9 +47,7 @@
 /* Webfont: Overpass-Light */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Light.eot'); /* IE9 Compat Modes */
-    src: url('/e2/fonts/rv7/overpass/Overpass-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/e2/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
          url('/e2/fonts/rv7/overpass/Overpass-Light.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/e2/fonts/rv7/overpass/Overpass-Light.svg#Overpass-Light') format('svg'); /* Legacy iOS */
     font-style: normal;
@@ -68,9 +58,7 @@
 /* Webfont: Overpass-LightItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.eot'); /* IE9 Compat Modes */
-    src: url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
+    src: url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
          url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.svg#Overpass-LightItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
@@ -81,9 +69,7 @@
 /* Webfont: Overpass-ExtraLight */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.eot'); /* IE9 Compat Modes */
-    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
+    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
          url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.svg#Overpass-ExtraLight') format('svg'); /* Legacy iOS */
     font-style: normal;
@@ -94,9 +80,7 @@
 /* Webfont: Overpass-ExtraLightItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.eot'); /* IE9 Compat Modes */
-    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
+    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
          url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
