--- a/_includes/elements/custom-select.html
+++ b/_includes/elements/custom-select.html
@@ -1,4 +1,9 @@
+<!--[if IE 9]>
+<div class="custom-select ie9">
+<![endif]-->
+<!--[if !IE 9]>-->
 <div class="custom-select">
+<!--<![endif]-->
     <select>
         <option value="0" selected>Option 1</option>
         <option value="1">Option 2</option>
