added to dependencies list just in case

--- a/_scss/base/_helper-classes.scss
+++ b/_scss/base/_helper-classes.scss
@@ -1,7 +1,9 @@
 // ----------------------------------------------------------------------
-// Dependencies: base/_variables.scss
+// Dependencies: base/_variables.scss,
+// base/custom-mixins/custom-transition
 // ----------------------------------------------------------------------
 // @import 'base/variables';
+// @import 'base/custom-mixins/custom-transition';
 
 
 //primary colors
