added to dependencies list just in case

--- a/_scss/base/_helper-classes.scss
+++ b/_scss/base/_helper-classes.scss
@@ -1,9 +1,11 @@
 // ----------------------------------------------------------------------
 // Dependencies: base/_variables.scss,
-// base/custom-mixins/custom-transition
+// base/custom-mixins/custom-transition,
+// base/mixins/opacity
 // ----------------------------------------------------------------------
 // @import 'base/variables';
 // @import 'base/custom-mixins/custom-transition';
+// @import 'base/mixins/opacity';
 
 
 //primary colors
