adjust buttons to also work with input buttons

--- a/_includes/elements/buttons.html
+++ b/_includes/elements/buttons.html
@@ -12,6 +12,13 @@
 </div>
 
 <div class="btn">
+    <div>
+        <div><span></span><span></span><span></span><span></span><span></span><span></span></div>
+        <input type="button" value="Input Button">
+    </div>
+</div>
+
+<div class="btn">
     <div class="white">
         <a href="#">READ MORE</a>
     </div>
