remove margin on hidden news elements

--- a/_scss/base/_helper-classes.scss
+++ b/_scss/base/_helper-classes.scss
@@ -144,7 +144,8 @@
     height: 0;
     min-height: 0;
     max-height: 0;
-    @include opacity(1);
-    @include custom-transition(opacity .25s ease, height .25s ease, min-height .25s ease, max-height .25s ease);
+    visibility: hidden;
+    @include opacity(0);
+    @include custom-transition(opacity .25s ease, height .25s ease, min-height .25s ease, max-height .25s ease, visibility .25s ease);
 }
 
