--- a/_scss/elements/_news.scss
+++ b/_scss/elements/_news.scss
@@ -7,6 +7,8 @@
     li {
       margin: 30px 0 0;
       
+      &.hidden { margin: 0; }
+      
       a {
         display: block;
         position: relative;
