make anchor tag in button inline-block

--- a/_scss/elements/_buttons.scss
+++ b/_scss/elements/_buttons.scss
@@ -43,7 +43,7 @@
   a, input[type="button"] {
     background-color: transparent;
     border-width: 0;
-    display: block;
+    display: inline-block;
     cursor: pointer;
     font: 600 .875em $font-family;
     padding: 11px 30px 9px;
