--- a/_scss/elements/_accordion.scss
+++ b/_scss/elements/_accordion.scss
@@ -105,9 +105,15 @@
     > li input[type=checkbox]:checked ~ label .minus-black { opacity: 1; }
       
     > li input[type=checkbox]:checked ~ label span {
-      &:before { transform: rotate(90deg); }
+      &:before {
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
+      }
       
-      &:after { transform: rotate(180deg); }
+      &:after {
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
+      }
     }
   }
 }
