--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -20,7 +20,7 @@
                   <ul>
                     <li><a href="//www.army.mil/info/organization/">Organization</a></li>
                     <li><a href="//www.army.mil/info/institution/publicAffairs/">Public Affairs</a></li>
-                    <li><a href="//www.army.mil/info/references/">Strategic Docs</a></li>
+                    <li><a href="//www.army.mil/info/references/">References</a></li>
                     <li><a href="//www.army.mil/info/armylife/careermanagement/">Careers</a></li>
                   </ul>
               </li>
