--- a/_scss/elements/_footer.scss
+++ b/_scss/elements/_footer.scss
@@ -26,6 +26,7 @@ footer {
   
   @include breakpoints(mobile nav tablet) {
     position: relative;
+    z-index: 0;
   }
   
   section { margin: 0; }
