p tags instead of span inside blockquote

--- a/_includes/elements/quotes.html
+++ b/_includes/elements/quotes.html
@@ -1,7 +1,7 @@
 <section class="quote">
     <div class="container">
         <div class="inner-container">
-            <blockquote><span>This is a challenging time for our nation and for our Army. My highest priority will be working to ensure Soldiers receive the necessary resources and training to remain the greatest land power in the world. I am confident our Army will fight and win wherever our nation asks, whenever our country calls.</span></blockquote>
+            <blockquote><p>This is a challenging time for our nation and for our Army. My highest priority will be working to ensure Soldiers receive the necessary resources and training to remain the greatest land power in the world. I am confident our Army will fight and win wherever our nation asks, whenever our country calls.</p></blockquote>
             <p>Secretary Eric Fanning</p>
         </div>
     </div>
