added browser upgrade code repo

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -17,3 +17,8 @@
 @import "base/colors";
 @import "base/defaults";
 @import "base/helper-classes";
+
+// ----------------------------------------------------------------------
+// Modules
+// ----------------------------------------------------------------------
+@import "modules/upgrade-warning";
