--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/guide.css" type="text/css" media="screen">
 </head>
 <body>
+    {% include elements/upgrade.html %}
     {% include elements/header.html %}
     <div class="main" role="main">
         {{ content }}
