--- a/_layouts/upgrade.html
+++ b/_layouts/upgrade.html
@@ -5,7 +5,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>Broswer Upgrade | The United States Army</title>
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
-    <link rel="stylesheet" href="/css/rv7/upgrade/style.css">
+    <link rel="stylesheet" href="/e2/css/rv7/upgrade/style.css">
     <!--[if IE 8]>
     <style type="text/css" media="screen">
         .nav-army-star{ width: 72px;}
