added link to photo slideshow

--- a/_scss/elements/_photo-slideshow.scss
+++ b/_scss/elements/_photo-slideshow.scss
@@ -75,6 +75,8 @@
         .caption-author {
           font-style: italic;
         }
+        
+        a { color: $secondary-text-color; }
       }
     } // end figcaption
   }
