update subnav to match HREF instead of ids and add heading to quotes

--- a/_includes/elements/nav.html
+++ b/_includes/elements/nav.html
@@ -1,9 +1,9 @@
 <nav>
     <ul>
-        <li><a class="active" href="#">OPTION 1</a></li>
-        <li><a href="#">OPTION 2</a></li>
-        <li><a href="#">OPTION 3</a></li>
-        <li><a href="#">OPTION 4</a></li>
-        <li><a href="#">OPTION 5</a></li>
+        <li><a class="active" href="#opt1">OPTION 1</a></li>
+        <li><a href="#opt2">OPTION 2</a></li>
+        <li><a href="#opt3">OPTION 3</a></li>
+        <li><a href="#opt4">OPTION 4</a></li>
+        <li><a href="#opt5">OPTION 5</a></li>
     </ul>
 </nav>
