--- a/_includes/elements/nav-mobile-dropdown.html
+++ b/_includes/elements/nav-mobile-dropdown.html
@@ -4,15 +4,15 @@
         <div class="subnav-inner">
             <label for="subnav-toggle{% if include.dropdown %}1{% endif %}">News Filters</label>
             <ul class="container">
-                <li><a class="active" href="#">Option 1</a></li>
-                <li><a href="#">Option 2</a></li>
-                <li><a href="#">Option 3</a></li>
-                <li><a href="#">Option 4</a></li>
-                <li><a href="#">Option 5</a></li>
+                <li><a class="active" href="#opt1">Option 1</a></li>
+                <li><a href="#opt2">Option 2</a></li>
+                <li><a href="#opt3">Option 3</a></li>
+                <li><a href="#opt4">Option 4</a></li>
+                <li><a href="#opt5">Option 5</a></li>
                 {% if include.dropdown %}
-                <li><a href="#">Option 6</a></li>
-                <li><a href="#">Option 7</a></li>
-                <li><a href="#">Option 8</a></li>
+                <li><a href="#opt6">Option 6</a></li>
+                <li><a href="#opt7">Option 7</a></li>
+                <li><a href="#opt8">Option 8</a></li>
                 {% endif %}
             </ul>
         </div>
