--- a/_scss/elements/_photo-slideshow.scss
+++ b/_scss/elements/_photo-slideshow.scss
@@ -1,5 +1,5 @@
 .photo-slideshow {
-  margin: 40px 0;
+  margin: 0 0 40px;
   overflow: hidden;
   position: relative;
 
@@ -76,7 +76,10 @@
           font-style: italic;
         }
         
-        a { color: $secondary-text-color; }
+        a {
+          color: $secondary-text-color;
+          font-weight: 400;
+        }
       }
     } // end figcaption
   }
