--- a/_scss/base/_helper-classes.scss
+++ b/_scss/base/_helper-classes.scss
@@ -141,11 +141,11 @@
 
 //generic helper classes
 .hidden {
-    height: 0;
-    min-height: 0;
-    max-height: 0;
-    visibility: hidden;
-    @include opacity(0);
-    @include custom-transition(opacity .25s ease, height .25s ease, min-height .25s ease, max-height .25s ease, visibility .25s ease);
+  height: 0;
+  min-height: 0;
+  max-height: 0;
+  visibility: hidden;
+  @include opacity(0);
+  @include custom-transition(opacity .25s ease, height .25s ease, min-height .25s ease, max-height .25s ease, visibility .5s linear);
 }
 
